--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -34,4 +34,8 @@ jobs:
         pwd
         ls
         cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+        ls bin
+        ls build
+        ls bulid
+        
 
